resources/css/style.css
/* Universal Styles */
body {
  margin: 0 auto;
}

header, body, footer, a {
  font-family: Helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
}

/* Header Styles */

header {
  display: flex;
  position: fixed;
  align-items: center;
  z-index: 1;
  width: 100%;
  background-color: black;
  height: 69px;
  border-bottom: 1px solid seashell;
}

.logo img {
  height: 50px;
  margin-left: 10px;
  padding-right: 700px;
}

nav {
  display: flex;
  justify-content: right;
}

nav span {
  padding-right: 20px;
}

a {
  text-decoration: underline;
}

/* Content Styles */

/* Mission Statment */

.mission {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url(../images/img-mission-background.jpg);
  background-repeat: no-repeat;
  background-position: center;
  height: 700px;
  text-align: center;
  width: 1200px;
  padding-top: 69px;
}

.text-content {
  background-color: black;
  width: 1200px;
}

/* Featured Teas */

.featured {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  width: 1000px;
  padding-top: 50px;
}

.specials {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 1000px;
  flex-wrap: wrap;
  margin-left: 100px;
}

.special {
  margin-right: 30px;
}

.special img {
  width: 300px;
  height: 200px;
}

.item {
  margin-top: 10px;
}

/* Locations */

.locations {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-image: url(../images/img-locations-background.jpg);
  background-repeat: no-repeat;
  background-position: center;
  height: 500px;
}

.location-box {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 300px;
  width: 980px;
}

.location {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: black;
  opacity: 1;
  width: 300px;
  height: 300px;
}

/* Contact */

.contact {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 200px;
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Footer */

footer span {
  text-align: left;
  margin-left: 20px;
}

